--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,16 @@
+JSVM_7_1 -> JSVM_7_2
+====================
+
+Date	  : Nov. 8, 2006
+Author	  : Jizheng XU(Microsoft)
+Contrib   : JVT-U067
+
+Changes:
+
+- Modify position calculation for upsampling according to JVT-U067
+
+
+
 JSVM_6_8_2 -> JSVM_7_1
 ======================
 
