--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,35 @@
+JSVM_12_1 -> JSVM_13
+======================
+
+Date  : Jan. 11, 2007
+Author: C. Chevance, E. Francois, V. Bottreau and J. Vieron (Thomson)
+Contributions : JVT-S018
+
+Changes:
+
+- 134 files have been modified + 
+- MBAFF tools are now supported on both Base and Enhancement layers
+- Inter-layer Progressive/Interlace scalability based on the use of a "Virtual Base Layer" is also implemented
+- The DownConvertStatic tool has been modified to support the resampling of both Interlaced or Progressive material. The "resample_mode" option has been added.
+
+Regarding the Validation scripts:
+- Around 35 files have been added 
+- AVC_Conformance: 2 MBAFF validation test sets using the MBAFF AVC conformance bitstreams are provided (6.6.7 and 6.6.20)
+- Short_term: 4 validation tests emulating the 4 scenarios defined in the CE on interlaced coding are provided (CFG1_P2I, CFG2_I2P,CFG3_I2P,CFG4_I2I) 
+In these scenarios, small "gop" size are considered and CABAC/CAVLC coding is used         
+- Long_term: 4 validation tests emulating the 4 scenarios defined in the CE on interlaced coding are provided (LCFG1_P2I, LCFG2_I2P, LCFG3_I2P, LCFG4_I2I) 
+Cfg1 -> cfg4 supported 
+
+- We added a directory called "422_to_420fullres": which contains the source code of the SD 422 to 420 conversion tool proposed in [VCEG-059]. ]. 
+This tool has to be used to generate the input sequence for validation tests (XCFG1_P2I and XCFG4_I2I) related to Interlaced material. 
+The way to use it is explained both in the Software Manual and in the associated Readme.txt file. 
+
+
+Notes: 
+1) The main changes are tagged "TMM_INTERLACE". However, there are too many modifications within the code so that, we didn't add a tag for each change. 
+2) Field Picture coding is not fully supported...Moreover features like Bottom-first coding are not yet supported.
+
+
 JSVM_7_12 -> JSVM_7_12_1
 ========================
 
