--- a/changes.txt
+++ b/changes.txt
@@ -1,8 +1,20 @@
- JSVM_8_0 -> JSVM_8_0_1
+JSVM_8_0_1 -> JSVM_8_1
 ========================
 
-Date  : Feb 6, 2007
-Author: C. Chevance V. Bottreau and, J. Vieron (Thomson)
+Date        : Feb 7, 2007
+Author      : K. Lee (Samsung)
+Contribution: JVT-T037
+
+Changes:
+
+- Only MbEncoder.cpp is modified (see JVT-T037)
+
+
+JSVM_8_0 -> JSVM_8_0_1
+========================
+
+Date   : Feb 6, 2007
+Authors: C. Chevance V. Bottreau and, J. Vieron (Thomson)
 
 Changes:
 
