--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,16 @@
+JSVM_8_6 -> JSVM_8_7
+======================
+Date        : March 2, 2007
+Author      : Jones He (Freescale)
+Contribution: JVT-V032
+
+Changes:
+
+- Extend the "disable_deblocking_filter_idc" to 3 and 4 for disabling chroma deblocking 
+  filter in enhanced layer while keeping luma processing per values 0 and 2, respectively
+- Bug fix (missing initialisation) in UvlcReader.cpp (Provided by Heiner Kirchhoffer / HHI)
+
+
 JSVM_8_5 -> JSVM_8_6
 ========================
 Date        : Feb 26, 2007
